Unification des formations continues

--- a/index.html
+++ b/index.html
@@ -105,50 +105,50 @@
                     <h3>Formation continue - VAE</h3>
 
                     <label id="CDGLabel"><strong>Contrôleur de Gestion</strong></label>
-                    <input type="radio" id="CDGVAE" name="VAE" value="VAE">
+                    <input type="radio" id="CDGVAE" name="formations" value="VAE">
                     <label for="CDGVAE">VAE</label>
-                    <input type="radio" id="CDGPT" name="VAE" value="Part-time">
+                    <input type="radio" id="CDGPT" name="formations" value="Part-time">
                     <label for="CDGPT">Part-time</label>
                     <br />
 
                     <label id="RMQHSELabel"><strong>Responsable Management QHSE : </strong></label>
-                    <input type="radio" id="RMQHSEVAE" name="VAE" value="VAE">
+                    <input type="radio" id="RMQHSEVAE" name="formations" value="VAE">
                     <label for="RMQHSEVAE">VAE</label>
-                    <input type="radio" id="RMQHSEPT" name="VAE" value="Part-time">
+                    <input type="radio" id="RMQHSEPT" name="formations" value="Part-time">
                     <label for="RMQHSEPT">Part-time</label>
                     <br />
 
                     <label id="MIILabel"><strong>Manager en Ingénierie Informatique : </strong></label>
-                    <input type="radio" id="MIIVAE" name="VAE" value="VAE">
+                    <input type="radio" id="MIIVAE" name="formations" value="VAE">
                     <label for="MIIVAE">VAE</label>
-                    <input type="radio" id="MIIPT" name="VAE" value="Part-time">
+                    <input type="radio" id="MIIPT" name="formations" value="Part-time">
                     <label for="MIIPT">Part-time</label>
                     <br />
                     <label id="BALabel"><strong>Business Analyst </strong></label>
-                    <input type="radio" id="BAPT" name="VAE" value="Part-time">
+                    <input type="radio" id="BAPT" name="formations" value="Part-time">
                     <label for="BAPT">Part-time</label>
                     <br />
 
                     <label id="MSRILabel"><strong>Manager de la sécurité des risques de
                             l’information</strong></label>
-                    <input type="radio" id="MSRIPT" name="VAE" value="Part-time">
+                    <input type="radio" id="MSRIPT" name="formations" value="Part-time">
                     <label for="MSRIPT">Part-time</label>
 
                     <h4>Votre situation</h4>
 
-                    <input type="radio" id="employee" name="situation">
+                    <input type="radio" id="employee" name="formations">
                     <label for="employee">Salarié(e), de l’entreprise : </label>
-                    <input type="text" id="employeeCompany" name="company">
+                    <input type="text" id="employeeCompany" name="formations">
                     <br />
-                    <input type="radio" id="seeker" name="situation">
+                    <input type="radio" id="seeker" name="formations">
                     <label for="seeker">Demandeur d’emploi</label>
                     <br />
-                    <input type="radio" id="individuals" name="situation">
+                    <input type="radio" id="individuals" name="formations">
                     <label for="individuals">Particulier </label>
                     <br />
-                    <input type="radio" id="other" name="situation">
+                    <input type="radio" id="other" name="formations">
                     <label for="other">Autre : </label>
-                    <input type="text" id="otherField" name="other">
+                    <input type="text" id="otherField" name="formations">
 
                 </div>
 
