--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
                     <em>En temps plein</em> (payant)
                     <input type="radio" id="CP3" name="formations"><label for="CP3">à Paris</label>
 
+                    <h4>BAC+5 :</h4>
+                    <strong>Manager en Ingénierie Informatique</strong>
+                    <br>
+                    <input type="radio" id="IL3" name="formations"><label for="IL3"><em>entrée en L3</em></label>
+                    <br>
+                    <strong>entrée en M1, spécialisation :</strong>
+                    <ul>
+                        <li><input type="radio" id="MSCC" name="formations"><label for="MSCC">MSc Cybersécurité</label></li>
+                        <li><input type="radio" id="MSCRS" name="formations"><label for="MSCRS">MSc Réseaux & Systèmes</label></li>
+                        <li><input type="radio" id="MSCBDC" name="formations"><label for="MSCBDC">MSc Big data & Cloud</label></li>
+                        <li><input type="radio" id="MSCGST" name="formations"><label for="MSCGST">MSc Gaming & Smart Tech</label></li>
+                        <li><input type="radio" id="MSCMSID" name="formations"><label for="MSCMSID">MSc Management des SI & Digitalisation</label></li>
+                        <li><input type="radio" id="ILS" name="formations"><label for="ILS">Ingénierie Logiciel et Applications</label></li>
+                        <li><input type="radio" id="IAA" name="formations"><label for="IAA">Intelligence Artificiel et Applications</label></li>
+                    </ul>
+
+                    <strong>entrée en M2, spécialisation :</strong>
+                    <ul>
+                        <li><input type="radio" id="MSCE" name="formations"><label for="MSCE">MSc Entrepreneuriat</label></li>
+                        <li><input type="radio" id="MSCIB" name="formations"><label for="MSCIB">MSc International Businnes for IT</label></li>
+                    </ul>
+
+                    <strong>Business Analyste </strong>(M1 + M2)
+                    <ul>
+                        <li><input type="radio" id="PSI" name="formations"><label for="PSI">Performance et Systèmes d'Information</label></li>
+                        <li><input type="radio" id="DRH" name="formations"><label for="DRH">Digitalisation RHT</label></li>
+                    </ul>
+
                 </div>
 
                 <div id="continue" class="formations">
@@ -151,7 +179,6 @@
                     <input type="text" id="otherField" name="formations">
 
                 </div>
-
         </article>
         <article class="colonne">
             <h2>Vos coordonnées :</h2>
