--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <h3>Informatique</h3>
 
                     <h4>BAC+2 :</h4>
-                    <input type="radio" id="SIO" name="formations"> <label for="SIO"><strong>BTS SIO, option SISR ou SLAM</strong></label>
+                    <input type="radio" id="SIO" name="formations"> <label for="SIO"><strong>BTS SIO, option SISR ou
+                            SLAM</strong></label>
                     <br>
 
                     <strong>Codeur informatique</strong><br>
@@ -90,7 +91,8 @@
 
 
                     <h4>BAC+3 (en 1 an) :</h4>
-                    <input type="radio" id="LIG" name="formations"><label for="LIG"><strong>Licence d’Informatique générale</strong></label>
+                    <input type="radio" id="LIG" name="formations"><label for="LIG"><strong>Licence d’Informatique
+                            générale</strong></label>
                     <br>
                     <strong>Concepteur développeur de solutions mobiles et connectées</strong><br>
                     <em>En alternance</em>
@@ -227,10 +229,10 @@
 
             <label id="secondChoice">N°2 : </label>
             <input type="text" id="secondChoiceField">
-            <br/>
+            <br />
             <label id="thirdChoice">N°3 : </label>
             <input type="text" id="thirdChoiceField">
-            <br/>
+            <br />
 
 
             <h2>Votre parrain à ITESCIA :</h2>
