--- a/index.html
+++ b/index.html
@@ -188,39 +188,39 @@
             <br>
 
             <label for="nom">Nom :</label>
-            <input type="text" id="nom" required>
+            <input type="text" id="nom" name="nom" required>
             <br>
 
             <label for="prenom">Prénom :</label>
-            <input type="text" id="prenom" required>
+            <input type="text" id="prenom" name="prenom" required>
             <br>
 
             <label for="adresse">Adresse :</label>
-            <input type="text" id="adresse">
+            <input type="text" id="adresse" name="adresse">
             <br>
 
             <label for="codepostal">Code postal :</label>
-            <input type="text" id="codepostal">
+            <input type="text" id="codepostal" name="codepostal">
 
             <label for="ville">Ville :</label>
-            <input type="text" name="ville">
+            <input type="text" id="ville" name="ville">
             <br>
 
 
             <label for="telfixe">Téléphone fixe :</label>
-            <input type="tel" name="telfixe">
+            <input type="tel" id="telfixe" name="telfixe">
             <br>
 
             <label for="telportable">Portable :</label>
-            <input type="tel" name="telportable" required>
+            <input type="tel" id="telportable" name="telportable" required>
             <br>
 
             <label for="email">Email :</label>
-            <input type="email" name="email" required>
+            <input type="email" id="email" name="email" required>
             <br>
 
             <label for="datenaissance">Date de naissance :</label>
-            <input type="date" name="datenaissance">
+            <input type="date" id="datenaissance" name="datenaissance">
             <br>
 
             Nationalité : <input type="radio" id="française" name="nationalite">Française
