--- a/index.html
+++ b/index.html
@@ -108,25 +108,36 @@
                     <br>
                     <strong>entrée en M1, spécialisation :</strong>
                     <ul>
-                        <li><input type="radio" id="MSCC" name="formations"><label for="MSCC">MSc Cybersécurité</label></li>
-                        <li><input type="radio" id="MSCRS" name="formations"><label for="MSCRS">MSc Réseaux & Systèmes</label></li>
-                        <li><input type="radio" id="MSCBDC" name="formations"><label for="MSCBDC">MSc Big data & Cloud</label></li>
-                        <li><input type="radio" id="MSCGST" name="formations"><label for="MSCGST">MSc Gaming & Smart Tech</label></li>
-                        <li><input type="radio" id="MSCMSID" name="formations"><label for="MSCMSID">MSc Management des SI & Digitalisation</label></li>
-                        <li><input type="radio" id="ILS" name="formations"><label for="ILS">Ingénierie Logiciel et Applications</label></li>
-                        <li><input type="radio" id="IAA" name="formations"><label for="IAA">Intelligence Artificiel et Applications</label></li>
+                        <li><input type="radio" id="MSCC" name="formations"><label for="MSCC">MSc Cybersécurité</label>
+                        </li>
+                        <li><input type="radio" id="MSCRS" name="formations"><label for="MSCRS">MSc Réseaux &
+                                Systèmes</label></li>
+                        <li><input type="radio" id="MSCBDC" name="formations"><label for="MSCBDC">MSc Big data &
+                                Cloud</label></li>
+                        <li><input type="radio" id="MSCGST" name="formations"><label for="MSCGST">MSc Gaming & Smart
+                                Tech</label></li>
+                        <li><input type="radio" id="MSCMSID" name="formations"><label for="MSCMSID">MSc Management des
+                                SI & Digitalisation</label></li>
+                        <li><input type="radio" id="ILS" name="formations"><label for="ILS">Ingénierie Logiciel et
+                                Applications</label></li>
+                        <li><input type="radio" id="IAA" name="formations"><label for="IAA">Intelligence Artificiel et
+                                Applications</label></li>
                     </ul>
 
                     <strong>entrée en M2, spécialisation :</strong>
                     <ul>
-                        <li><input type="radio" id="MSCE" name="formations"><label for="MSCE">MSc Entrepreneuriat</label></li>
-                        <li><input type="radio" id="MSCIB" name="formations"><label for="MSCIB">MSc International Businnes for IT</label></li>
+                        <li><input type="radio" id="MSCE" name="formations"><label for="MSCE">MSc
+                                Entrepreneuriat</label></li>
+                        <li><input type="radio" id="MSCIB" name="formations"><label for="MSCIB">MSc International
+                                Businnes for IT</label></li>
                     </ul>
 
                     <strong>Business Analyste </strong>(M1 + M2)
                     <ul>
-                        <li><input type="radio" id="PSI" name="formations"><label for="PSI">Performance et Systèmes d'Information</label></li>
-                        <li><input type="radio" id="DRH" name="formations"><label for="DRH">Digitalisation RHT</label></li>
+                        <li><input type="radio" id="PSI" name="formations"><label for="PSI">Performance et Systèmes
+                                d'Information</label></li>
+                        <li><input type="radio" id="DRH" name="formations"><label for="DRH">Digitalisation RHT</label>
+                        </li>
                     </ul>
 
                 </div>
