Fix CSS Bouton, commentaires

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     </div>
 
 
+    <!-- Bas de page -->
     <footer>
         <p>ITESCIA, établissement de la CCI Paris-Ile-de-France collecte ces données afin de répondre à votre demande et
             au-delà vous tenir informé des activités de nos services.
