Ajout d enumber sur mon téléphone fixe

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
             <label for="telfixe">Téléphone fixe :</label>
-            <input type="tel" id="telfixe" name="telfixe">
+            <input type="tel" id="telfixe" name="telfixe" required>
             <br>
 
             <label for="telportable">Portable :</label>
